[gd_scene load_steps=2 format=3 uid="uid://dplisin20t70j"]

[ext_resource type="Script" path="res://player/attacks/alt_bullet/alt_bullet_dodge.gd" id="1_i6spq"]

[node name="alt_bullet_dodge2" type="RayCast2D"]
target_position = Vector2(1000, 0)
collision_mask = 32
script = ExtResource("1_i6spq")

[node name="beam_hurtbox" type="Area2D" parent="." groups=["player_attack"]]

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 10, 0)
width = 5.0
default_color = Color(2.5, 2.5, 2.5, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="beam_hurtbox" to="." method="_on_beam_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
